# Kiro-Hackathon

./: .gitignore  CleanLabel — Project Hub 34ca998cf9298148a2a6c9f5e687a28e.md  Feature List 34ca998cf92981f79c29d7f5b2b5e632.md  PMD — Product Management Document 34ca998cf9298183b4c5f938a22b0c4e.md  README.md  Tech Architecture, Schemas & API 34ca998cf92981748bf3d747b0a20bdc.md  index.html  package-lock.json  tailwind.config.ts
api/: .env.example  config.py  deps.py  main.py  pyproject.toml
api/banned_chemicals/: COSING_Annex_II_v2.txt
api/db/migrations/: 001_initial_schema.sql  002_seed_reference_data.sql  003_seed_popular_products.sql
api/routers/: alternatives.py  analyze.py  ingredients.py  onboarding.py  products.py  profile.py  scan.py  user_products.py
api/schemas/: agent.py  analysis.py  errors.py  ingredient.py  product.py  profile.py  scan.py
api/scripts/: verify_supabase.py
api/services/: banned_lookup.py  events.py  ocr.py  open_beauty_facts.py
api/services/agents/: base.py  (+8 more)
api/tests/: conftest.py  test_agents_alternative_finder.py  test_agents_analogy_writer.py  test_agents_live.py  test_agents_orchestrator.py  test_agents_profile_reasoner.py  test_agents_regulatory_xref.py  test_agents_scanner.py  test_alternatives_router.py  test_analyze.py  test_errors.py  test_events.py  test_ingredients_router.py  test_llm_client.py  test_main_handlers.py  test_ocr.py  test_onboarding.py  test_onboarding_router.py  test_open_beauty_facts.py  test_products_router.py  test_profile_router.py  test_scan_router.py  test_schemas.py  test_user_products_router.py
(+111 files in other folders)
