[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleanlabel-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "supabase>=2.10,<3",
    "anthropic==0.25.8",
    "httpx==0.27.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sse-starlette==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "httpx>=0.28.1,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["."]
